# -----------------------------------------------------------------------------
# lib/example/CMakeLists.txt
#
# This file is no longer used. The host-app project now includes the shared
# lib/example directly via add_subdirectory() in ../CMakeLists.txt, pointing
# at the root repository's lib/example/CMakeLists.txt.
#
# Coverage for external sources is handled by the COVERAGE_ADDITIONAL_SOURCE_DIRS
# global property (see ../CMakeLists.txt and cmake/coverage/msvc_coverage.cmake).
# -----------------------------------------------------------------------------
